--- a/index.html
+++ b/index.html
@@ -11,3 +11,5 @@
     <p>This is where I showcase my work and services. Check back often for updates!</p>
 </body>
 </html>
+<h2>About Me</h2>
+<p>I’m a creative professional passionate about design and storytelling. Explore my projects to see my work in action!</p>
