--- a/index.html
+++ b/index.html
@@ -13,3 +13,9 @@
 </html>
 <h2>About Me</h2>
 <p>I’m a creative professional passionate about design and storytelling. Explore my projects to see my work in action!</p>
+<h2>Portfolio</h2>
+<ul>
+    <li>Project 1: <a href="project1.html">Graphic Design for Events</a></li>
+    <li>Project 2: <a href="project2.html">Digital Marketing Strategy</a></li>
+    <li>Project 3: <a href="project3.html">Custom Illustration</a></li>
+</ul>
