--- a/index.html
+++ b/index.html
@@ -3,19 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>My Creative Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>This is where I showcase my work and services. Check back often for updates!</p>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#services">Services</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
+    <section id="home">
+        <h1>Welcome to My Creative Hub</h1>
+        <p>Innovative designs and strategies to transform your vision into reality.</p>
+    </section>
+
+    <section id="services">
+        <h2>Services</h2>
+        <div class="service-item">
+            <h3>Email Marketing</h3>
+            <p>Custom campaigns that engage and convert your audience.</p>
+        </div>
+        <div class="service-item">
+            <h3>SEO Optimization</h3>
+            <p>Get discovered with tailored strategies to boost your visibility.</p>
+        </div>
+        <div class="service-item">
+            <h3>Creative Direction</h3>
+            <p>Transforming ideas into bold visuals and compelling stories.</p>
+        </div>
+    </section>
+
+    <section id="portfolio">
+        <h2>Portfolio</h2>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <h3>Project 1</h3>
+                <p>Event Email Campaign with exceptional open rates.</p>
+            </div>
+            <div class="portfolio-item">
+                <h3>Project 2</h3>
+                <p>SEO strategy for a 50% increase in organic traffic.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Email me at <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+    </section>
 </body>
 </html>
-<h2>About Me</h2>
-<p>I’m a creative professional passionate about design and storytelling. Explore my projects to see my work in action!</p>
-<h2>Portfolio</h2>
-<ul>
-    <li>Project 1: <a href="project1.html">Graphic Design for Events</a></li>
-    <li>Project 2: <a href="project2.html">Digital Marketing Strategy</a></li>
-    <li>Project 3: <a href="project3.html">Custom Illustration</a></li>
-</ul>
