--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
     </nav>
-
-    <section id="home">
-        <h1>Welcome to My Creative Hub</h1>
-        <p>Innovative designs and strategies to transform your vision into reality.</p>
-    </section>
-
+  <section id="home" class="landing-page">
+    <h1>A Fresh Perspective for Your Brand</h1>
+    <p>Helping businesses thrive with creativity, strategy, and purpose. Let's work together to turn ideas into impact.</p>
+    <a href="#services" class="cta-button">See What I Offer</a>
+</section>
     <section id="services">
         <h2>Services</h2>
         <div class="service-item">
