--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Creative Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
+    <div id="particles-js"></div>
 <body>
     <nav>
         <a href="#home">Home</a>
