--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dynamic Background</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+</head>
+<body>
+    <!-- Particle Background -->
+    <div id="particles-js"></div>
+
+    <!-- Landing Page Content -->
+    <div class="landing-page">
+        <h1>A Proven Method That Puts Your Ads Ahead</h1>
+        <p>Keep your campaigns performing at their best, no matter what the market throws at you—without manual interference.</p>
+        <a href="#how-it-works" class="cta-button">How It Works</a>
+    </div>
+
+    <!-- Add your JavaScript -->
+    <script src="script.js"></script>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
