--- a/index.html
+++ b/index.html
@@ -1,83 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Background</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Particle Background -->
-    <div id="particles-js"></div>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#services">Services</a>
+    <a href="#portfolio">Portfolio</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-    <!-- Landing Page Content -->
-    <div class="landing-page">
-        <h1>A Proven Method That Puts Your Ads Ahead</h1>
-        <p>Keep your campaigns performing at their best, no matter what the market throws at you—without manual interference.</p>
-        <a href="#how-it-works" class="cta-button">How It Works</a>
-    </div>
-
-    <!-- Add your JavaScript -->
-    <script src="script.js"></script>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Creative Hub</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-    <div id="particles-js"></div>
-<body>
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#services">Services</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-    </nav>
   <section id="home" class="landing-page">
     <h1>A Fresh Perspective for Your Brand</h1>
     <p>Helping businesses thrive with creativity, strategy, and purpose. Let's work together to turn ideas into impact.</p>
     <a href="#services" class="cta-button">See What I Offer</a>
-</section>
-    <section id="services">
-        <h2>Services</h2>
-        <div class="service-item">
-            <h3>Email Marketing</h3>
-            <p>Custom campaigns that engage and convert your audience.</p>
-        </div>
-        <div class="service-item">
-            <h3>SEO Optimization</h3>
-            <p>Get discovered with tailored strategies to boost your visibility.</p>
-        </div>
-        <div class="service-item">
-            <h3>Creative Direction</h3>
-            <p>Transforming ideas into bold visuals and compelling stories.</p>
-        </div>
-    </section>
+  </section>
 
-    <section id="portfolio">
-        <h2>Portfolio</h2>
-        <div class="portfolio-grid">
-            <div class="portfolio-item">
-                <h3>Project 1</h3>
-                <p>Event Email Campaign with exceptional open rates.</p>
-            </div>
-            <div class="portfolio-item">
-                <h3>Project 2</h3>
-                <p>SEO strategy for a 50% increase in organic traffic.</p>
-            </div>
-        </div>
-    </section>
+  <section id="services">
+    <h2>Services</h2>
+    <p>Email Marketing</p>
+    <p>SEO Optimization</p>
+    <p>Creative Direction</p>
+  </section>
 
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Email me at <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-    </section>
+  <section id="portfolio">
+    <h2>Portfolio</h2>
+    <p>Project 1: Event Email Campaign</p>
+    <p>Project 2: SEO Strategy</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email me at <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+  </section>
+
+  <script>
+    // Place the JavaScript for the dynamic background here
+  </script>
 </body>
 </html>
