--- a/index.html
+++ b/index.html
@@ -6,21 +6,12 @@
   <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    /* Ensure the background canvas covers the entire page */
+    /* Ensure the background covers the entire page */
     body {
       margin: 0;
       padding: 0;
       overflow-x: hidden;
       font-family: Arial, sans-serif;
-    }
-
-    #backgroundCanvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1; /* Place it behind all content */
     }
 
     nav {
@@ -54,7 +45,9 @@
       align-items: center;
       text-align: center;
       min-height: 100vh;
-      background-color: transparent;
+      background: linear-gradient(120deg, #FF6B6B, #845EC2, #00C9A7, #FFC75F);
+      background-size: 400% 400%;
+      animation: gradientAnimation 15s ease infinite;
       color: #fff;
       padding: 20px;
     }
@@ -87,11 +80,21 @@
     .cta-button:hover {
       background-color: #FFD700;
     }
+
+    @keyframes gradientAnimation {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
+    }
   </style>
 </head>
 <body>
-  <canvas id="backgroundCanvas"></canvas>
-
   <nav>
     <a href="#home">Home</a>
     <a href="#services">Services</a>
@@ -105,53 +108,5 @@
     <p>Helping businesses thrive with creativity, strategy, and purpose. Let’s work together to turn ideas into impact.</p>
     <a href="#services" class="cta-button">See What I Offer</a>
   </section>
-
-  <!-- Other sections (services, portfolio, etc.) can go here -->
-
-  <script>
-
-    const resize = () => {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-    };
-
-    window.addEventListener('resize', resize);
-    resize();
-
-    const dots = Array.from({ length: 100 }, () => ({
-      x: Math.random() * canvas.width,
-      y: Math.random() * canvas.height,
-      radius: Math.random() * 2 + 1,
-      dx: (Math.random() - 0.5) * 2,
-      dy: (Math.random() - 0.5) * 2,
-    }));
-
-    const draw = () => {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      dots.forEach(dot => {
-        ctx.beginPath();
-        ctx.arc(dot.x, dot.y, dot.radius, 0, Math.PI * 2);
-        ctx.fillStyle = '#FFFFFF';
-        ctx.fill();
-      });
-    };
-
-    const update = () => {
-      dots.forEach(dot => {
-        dot.x += dot.dx;
-        dot.y += dot.dy;
-        if (dot.x < 0 || dot.x > canvas.width) dot.dx *= -1;
-        if (dot.y < 0 || dot.y > canvas.height) dot.dy *= -1;
-      });
-    };
-
-    const animate = () => {
-      draw();
-      update();
-      requestAnimationFrame(animate);
-    };
-
-    animate();
-  </script>
 </body>
 </html>
