--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="graphic-content">
       <h2>Efficiency Beyond Limits</h2>
       <p>Explore groundbreaking solutions to redefine your boundaries.</p>
-      <img src="your-hand-image-path.jpg" alt="Cool Hand Graphic">
+      <img src="web.png" alt="Miguel angel cool Graphic">
     </div>
   </section>
 
