--- a/index.html
+++ b/index.html
@@ -10,46 +10,47 @@
   <!-- Navigation Bar -->
   <nav>
     <a href="#home">Home</a>
-    <a href="#section2">Graphic Section</a>
-    <a href="#section3">Bold Section</a>
-    <a href="#contact">Contact</a>
+    <a href="#graphic-section">Graphic Section</a>
+    <a href="#bold-section">Bold Section</a>
+    <a href="#contact-section">Contact</a>
   </nav>
 
   <!-- Landing Page -->
   <section id="home" class="landing-page">
     <h1>A Fresh Perspective for Your Brand</h1>
     <p>Helping businesses thrive with creativity, strategy, and purpose. Let’s work together to turn ideas into impact.</p>
-    <a href="#section2" class="cta-button">Discover More</a>
+    <a href="#graphic-section" class="cta-button">Discover More</a>
   </section>
 
   <!-- Graphic Section -->
-  <section id="section2" class="graphic-section">
+  <section id="graphic-section" class="graphic-section">
     <div class="graphic-content">
       <h2>Efficiency Beyond Limits</h2>
       <p>Explore groundbreaking solutions to redefine your boundaries.</p>
-      <img src="Website-gema.png" alt="Miguel angel cool Graphic">
     </div>
   </section>
 
   <!-- Bold Section -->
-  <section id="section3" class="bold-section">
+  <section id="bold-section" class="bold-section">
     <h2>Bold Ideas for Bold Brands</h2>
     <p>We turn bold visions into reality with a strategy-driven approach.</p>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="contact-section">
+  <section id="contact-section" class="contact-section">
     <h2>Contact Us</h2>
     <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
   </section>
 
-  <!-- JavaScript for Dynamic Background -->
   <script>
-    document.addEventListener('mousemove', (event) => {
-      const x = (event.clientX / window.innerWidth) - 0.5;
-      const y = (event.clientY / window.innerHeight) - 0.5;
-      document.body.style.setProperty('--posX', x * 20);
-      document.body.style.setProperty('--posY', y * 20);
+    // Smooth Scroll for Navigation Links
+    document.querySelectorAll('nav a').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth'
+        });
+      });
     });
   </script>
 </body>
