--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
     <a href="#graphic-section" class="cta-button">Discover More</a>
   </section>
 
-  <!-- Graphic Section -->
-  <section id="graphic-section" class="graphic-section">
-    <div class="graphic-content">
-      <h2>Efficiency Beyond Limits</h2>
-      <p>Explore groundbreaking solutions to redefine your boundaries.</p>
-    </div>
-  </section>
+ <section id="section2" class="graphic-section">
+  <!-- Replace "path/to/your/image.png" with the actual path -->
+  <img src="path/to/your/image.png" alt="Cool Graphic">
+  <div class="graphic-content">
+    <h2>Efficiency Beyond Limits</h2>
+    <p>Explore groundbreaking solutions to redefine your boundaries.</p>
+  </div>
+</section>
+
 
   <!-- Bold Section -->
   <section id="bold-section" class="bold-section">
