--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
  <section id="section2" class="graphic-section">
   <!-- Replace "path/to/your/image.png" with the actual path -->
-  <img src="path/to/your/image.png" alt="Cool Graphic">
+  <img src="Website gema.png" alt="Cool Graphic">
   <div class="graphic-content">
     <h2>Efficiency Beyond Limits</h2>
     <p>Explore groundbreaking solutions to redefine your boundaries.</p>
