--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
     <a href="#graphic-section" class="cta-button">Discover More</a>
   </section>
 
- <section id="section2" class="graphic-section">
-  <!-- Replace "path/to/your/image.png" with the actual path -->
-  <img src="Website gema.png" alt="Cool Graphic">
-  <div class="graphic-content">
+  <section id="section2" class="graphic-section">
+  <img src="Website gema.png" alt="Cool Graphic" class="graphic-image">
+  <div class="text-content">
     <h2>Efficiency Beyond Limits</h2>
     <p>Explore groundbreaking solutions to redefine your boundaries.</p>
   </div>
 </section>
-
 
   <!-- Bold Section -->
   <section id="bold-section" class="bold-section">
