--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     <a href="#graphic-section" class="cta-button">Discover More</a>
   </section>
 
-  <section id="section2" class="graphic-section">
-  <img src="Website gema.png" alt="Cool Graphic" class="graphic-image">
+<section id="section2" class="graphic-section">
+  <div class="graphic-image-container">
+    <img src="Website gema.png" alt="Cool Graphic" class="graphic-image">
+  </div>
   <div class="text-content">
     <h2>Efficiency Beyond Limits</h2>
     <p>Explore groundbreaking solutions to redefine your boundaries.</p>
