--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Navigation Bar -->
+
+  <!-- Navigation -->
   <nav>
-    <a href="#home">Home</a>
-    <a href="#graphic-section">Graphic Section</a>
-    <a href="#bold-section">Bold Section</a>
-    <a href="#contact-section">Contact</a>
+    <a href="#landing">Home</a>
+    <a href="#portfolio">Portfolio</a>
+    <a href="#services">Services</a>
   </nav>
 
   <!-- Landing Page -->
-  <section id="home" class="landing-page">
-    <h1>A Fresh Perspective for Your Brand</h1>
-    <p>Helping businesses thrive with creativity, strategy, and purpose. Let’s work together to turn ideas into impact.</p>
-    <a href="#graphic-section" class="cta-button">Discover More</a>
+  <section id="landing" class="landing-page">
+    <div class="overlay">
+      <h1>Welcome to My Portfolio</h1>
+      <p>Your tagline or brief introduction goes here.</p>
+    </div>
   </section>
 
-<section id="section2" class="graphic-section">
-  <div class="text-content">
-    <h2>Efficiency Beyond Limits</h2>
-    <p>Explore groundbreaking solutions to redefine your boundaries.</p>
-  </div>
-  <div class="graphic-image-container">
-    <img src="Website gema.png" alt="Cool Graphic" class="graphic-image">
-  </div>
-</section>
-
- 
-  <!-- Bold Section -->
-  <section id="bold-section" class="bold-section">
-    <h2>Bold Ideas for Bold Brands</h2>
-    <p>We turn bold visions into reality with a strategy-driven approach.</p>
+  <!-- Portfolio Section -->
+  <section id="portfolio" class="portfolio-section">
+    <h2>My Work</h2>
+    <p>Here are some examples of projects I’ve worked on.</p>
+    <div class="portfolio-item">
+      <img src="your-portfolio-image.png" alt="Portfolio Example" />
+      <!-- You can add more images or even create a grid of items if desired -->
+    </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact-section" class="contact-section">
-    <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+  <!-- Services Section -->
+  <section id="services" class="services-section">
+    <h2>Services I Provide</h2>
+    <ul class="services-list">
+      <li>Creative Strategy & Branding</li>
+      <li>Graphic & Web Design</li>
+      <li>Digital Marketing</li>
+      <li>Consultation & Project Management</li>
+    </ul>
+    <a class="book-button" href="https://calendly.com/your-scheduling-link" target="_blank">Book a Meeting</a>
   </section>
 
+  <!-- Smooth Scroll Script -->
   <script>
-    // Smooth Scroll for Navigation Links
     document.querySelectorAll('nav a').forEach(anchor => {
-      anchor.addEventListener('click', function (e) {
+      anchor.addEventListener('click', function(e) {
         e.preventDefault();
         document.querySelector(this.getAttribute('href')).scrollIntoView({
           behavior: 'smooth'
@@ -56,14 +56,5 @@
       });
     });
   </script>
-  <script>
-  document.addEventListener('mousemove', (event) => {
-    const x = (event.clientX / window.innerWidth) - 0.5;
-    const y = (event.clientY / window.innerHeight) - 0.5;
-    document.body.style.setProperty('--posX', x * 20);
-    document.body.style.setProperty('--posY', y * 20);
-  });
-</script>
-
 </body>
 </html>
