--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <h2>My Work</h2>
     <p>Here are some examples of projects I’ve worked on.</p>
     <div class="portfolio-item">
-      <img src="your-portfolio-image.png" alt="Portfolio Example" />
-      <!-- You can add more images or even create a grid of items if desired -->
+      <img src="Gema.png" alt="Portfolio Example" />
     </div>
   </section>
 
