--- a/index.html
+++ b/index.html
@@ -3,45 +3,79 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
+  <title>Inspired Portfolio</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Optionally add a Google Font for a modern look -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
   <!-- Navigation -->
   <nav>
-    <a href="#landing">Home</a>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#services">Services</a>
+    <div class="container">
+      <a href="#hero" class="logo">MyBrand</a>
+      <ul class="nav-links">
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
   </nav>
 
-  <!-- Landing Page -->
-  <section id="landing" class="landing-page">
-    <div class="overlay">
+  <!-- Hero Section -->
+  <section id="hero" class="hero-section">
+    <div class="hero-overlay">
       <h1>Welcome to My Portfolio</h1>
-      <p>Your tagline or brief introduction goes here.</p>
+      <p>Where creativity meets innovation</p>
+      <a href="#portfolio" class="btn">View Work</a>
     </div>
   </section>
 
   <!-- Portfolio Section -->
   <section id="portfolio" class="portfolio-section">
-    <h2>My Work</h2>
-    <p>Here are some examples of projects I’ve worked on.</p>
-    <div class="portfolio-item">
-      <img src="Gema.png" alt="Portfolio Example" />
+    <div class="container">
+      <h2>My Work</h2>
+      <p>A glimpse of some projects I've passionately worked on.</p>
+      <div class="portfolio-grid">
+        <!-- Replace the src with your actual image paths -->
+        <div class="portfolio-item">
+          <img src="Gema.png" alt="Project 1">
+        </div>
+        <div class="portfolio-item">
+          <img src="sample2.png" alt="Project 2">
+        </div>
+        <div class="portfolio-item">
+          <img src="sample3.png" alt="Project 3">
+        </div>
+        <div class="portfolio-item">
+          <img src="sample4.png" alt="Project 4">
+        </div>
+      </div>
     </div>
   </section>
 
   <!-- Services Section -->
   <section id="services" class="services-section">
-    <h2>Services I Provide</h2>
-    <ul class="services-list">
-      <li>Creative Strategy & Branding</li>
-      <li>Graphic & Web Design</li>
-      <li>Digital Marketing</li>
-      <li>Consultation & Project Management</li>
-    </ul>
-    <a class="book-button" href="https://calendly.com/your-scheduling-link" target="_blank">Book a Meeting</a>
+    <div class="container">
+      <h2>Services</h2>
+      <p>What I can do for you</p>
+      <ul class="services-list">
+        <li>Creative Strategy & Branding</li>
+        <li>Graphic & Web Design</li>
+        <li>Digital Marketing</li>
+        <li>Consultation & Project Management</li>
+      </ul>
+      <a href="https://calendly.com/your-scheduling-link" class="btn" target="_blank">Book a Meeting</a>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="contact-section">
+    <div class="container">
+      <h2>Get in Touch</h2>
+      <p>Contact me via email or phone.</p>
+      <!-- Add your contact details or a form -->
+    </div>
   </section>
 
   <!-- Smooth Scroll Script -->
