--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Inspired Portfolio</title>
+  <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Optionally add a Google Font for a modern look -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Optional Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- Navigation -->
@@ -17,17 +17,18 @@
         <li><a href="#hero">Home</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contact">Get in Touch</a></li>
       </ul>
     </div>
   </nav>
 
   <!-- Hero Section -->
   <section id="hero" class="hero-section">
-    <div class="hero-overlay">
+    <div class="hero-content">
+      <!-- Website image on top -->
+      <img class="hero-img" src="website-gema.png" alt="Hero Image">
+      <!-- Big centered text -->
       <h1>Welcome to My Portfolio</h1>
-      <p>Where creativity meets innovation</p>
-      <a href="#portfolio" class="btn">View Work</a>
     </div>
   </section>
 
@@ -35,20 +36,20 @@
   <section id="portfolio" class="portfolio-section">
     <div class="container">
       <h2>My Work</h2>
-      <p>A glimpse of some projects I've passionately worked on.</p>
+      <p>Here are some examples of projects I’ve worked on.</p>
       <div class="portfolio-grid">
-        <!-- Replace the src with your actual image paths -->
+        <!-- Portfolio items -->
         <div class="portfolio-item">
-          <img src="Gema.png" alt="Project 1">
+          <img src="Gema.png" alt="Portfolio Sample 1">
         </div>
         <div class="portfolio-item">
-          <img src="sample2.png" alt="Project 2">
+          <img src="sample2.png" alt="Portfolio Sample 2">
         </div>
         <div class="portfolio-item">
-          <img src="sample3.png" alt="Project 3">
+          <img src="sample3.png" alt="Portfolio Sample 3">
         </div>
         <div class="portfolio-item">
-          <img src="sample4.png" alt="Project 4">
+          <img src="sample4.png" alt="Portfolio Sample 4">
         </div>
       </div>
     </div>
@@ -57,15 +58,14 @@
   <!-- Services Section -->
   <section id="services" class="services-section">
     <div class="container">
-      <h2>Services</h2>
-      <p>What I can do for you</p>
+      <h2>Services I Provide</h2>
       <ul class="services-list">
         <li>Creative Strategy & Branding</li>
         <li>Graphic & Web Design</li>
         <li>Digital Marketing</li>
         <li>Consultation & Project Management</li>
       </ul>
-      <a href="https://calendly.com/your-scheduling-link" class="btn" target="_blank">Book a Meeting</a>
+      <a class="btn" href="https://calendly.com/your-scheduling-link" target="_blank">Book a Meeting</a>
     </div>
   </section>
 
@@ -73,8 +73,8 @@
   <section id="contact" class="contact-section">
     <div class="container">
       <h2>Get in Touch</h2>
-      <p>Contact me via email or phone.</p>
-      <!-- Add your contact details or a form -->
+      <p>You can reach me via email or phone.</p>
+      <!-- You can add additional contact info or a form here -->
     </div>
   </section>
 
