--- a/index.html
+++ b/index.html
@@ -22,15 +22,21 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
-  <section id="hero" class="hero-section">
-    <div class="hero-content">
-      <!-- Website image on top -->
-      <img class="hero-img" src="website-gema.png" alt="Hero Image">
-      <!-- Big centered text -->
+ <!-- Hero Section -->
+<section id="hero" class="hero-section">
+  <div class="hero-container">
+    <!-- Text Block -->
+    <div class="hero-text">
       <h1>Welcome to My Portfolio</h1>
+      <p>Your tagline goes here.</p>
     </div>
-  </section>
+    <!-- Image Block -->
+    <div class="hero-image">
+      <img src="website-gema.png" alt="Hero Image">
+    </div>
+  </div>
+</section>
+
 
   <!-- Portfolio Section -->
   <section id="portfolio" class="portfolio-section">
